WIP - DO NOT MERGE

--- a/templates/default/sv-jenkins-log-run.erb
+++ b/templates/default/sv-jenkins-log-run.erb
@@ -1,2 +1,2 @@
 #!/bin/sh
-exec chpst -unobody logger -d -p local6.info -t [jenkins]
+exec chpst -unobody logger -d -p local6.info -t [jenkins_<%= @options['name'] %>]
