--- a/templates/default/sv-jenkins-run.erb
+++ b/templates/default/sv-jenkins-run.erb
@@ -1,9 +1,9 @@
 #!/bin/sh
-cd <%= node['jenkins']['server']['home'] %>
+cd <%= @options[:home] %>
 touch jenkins.start
-exec chpst -u <%= node['jenkins']['server']['user'] %> -U <%= node['jenkins']['server']['user'] %> \
-  env HOME=<%= node['jenkins']['server']['home'] %> \
-  JENKINS_HOME=<%= node['jenkins']['server']['home'] %>/jenkins-data \
-  java <%= node['jenkins']['server']['jvm_options'] %> -jar jenkins.war \
-  -Xloggc:<%= node['jenkins']['server']['log_dir'] %>/gclog.log \
-  --httpPort=<%= node['jenkins']['server']['port'] %>
+exec chpst -u <%= @options[:user] %> -U <%= @options[:user] %> \
+  env HOME=<%= @options[:home] %> \
+  JENKINS_HOME=<%= @options[:data_dir] %> \
+  java <%= @options[:jvm_options] %> -jar <%= @options[:war_path] %> \
+  -Xloggc:<%= @options[:log_dir] %>/gclog.log \
+  --httpPort=<%= @options[:port] %>
